# LogNexus

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  python-package.yml
lognexus/: __init__.py  cli.py  core.py  model.py  utils.py
output/: DJIFlightRecord_2024-11-10_[03-09-29].json  DJIFlightRecord_2024-11-10_[03-09-29]_processed.xlsx  DJIFlightRecord_2025-05-12_[08-01-12].json  DJIFlightRecord_2025-05-12_[08-01-12]_processed.xlsx  DJIFlightRecord_2025-05-12_[08-20-56].json  DJIFlightRecord_2025-05-12_[08-20-56]_processed.xlsx  DJIFlightRecord_2025-06-27_[03-23-15].json  DJIFlightRecord_2025-06-27_[03-23-15]_processed.xlsx  DJIFlightRecord_2025-06-27_[03-27-42].json  DJIFlightRecord_2025-06-27_[03-27-42]_processed.xlsx  DJIFlightRecord_2025-06-27_[03-31-40].json  DJIFlightRecord_2025-06-27_[03-31-40]_processed.xlsx  DJIFlightRecord_2025-06-27_[03-34-35].json  DJIFlightRecord_2025-06-27_[03-34-35]_processed.xlsx
